manifests/integrated-tools/meshcentral/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshcentral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meshcentral
  template:
    metadata:
      labels:
        app: meshcentral
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      securityContext:  # FIX for: chmod: /opt/mesh: Operation not permitted, remove this when chmod on /opt/mesh/ is removed
        runAsUser: 0

      containers:
      - name: openframe-meshcentral
        image: openframe-meshcentral
        ports:
        - name: meshcentral
          containerPort: 8383
        - name: agent
          containerPort: 80
        volumeMounts:
        - name: meshcentral-data
          mountPath: /opt/mesh
        livenessProbe:
          httpGet:
            path: /health.ashx
            port: 8383
          initialDelaySeconds: 30
          periodSeconds: 15
      volumes:
      - name: meshcentral-data
        persistentVolumeClaim:
          claimName: meshcentral-data
